# nrf52_template

./: .gitignore  Cargo.toml  README.md  README_zh.md
.cargo/: config
src/: main.rs
